--- a/LocAdoc/app/src/main/res/layout/activity_home_page.xml
+++ b/LocAdoc/app/src/main/res/layout/activity_home_page.xml
@@ -47,9 +47,9 @@
             <FrameLayout
                 android:id="@+id/areaContainer"
                 android:layout_width="match_parent"
+                android:background="@color/LocadocC"
                 android:layout_height="0dp"
                 android:layout_weight="0">
-
             </FrameLayout>
         </LinearLayout>
 
