--- a/LocAdoc/app/src/main/res/layout/fragment_new_area.xml
+++ b/LocAdoc/app/src/main/res/layout/fragment_new_area.xml
@@ -10,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:drawable/screen_background_light_transparent">
+        android:background="@color/LocadocC">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,30 +21,38 @@
                 android:id="@+id/NewAreaLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="10dp"
                 android:text="@string/new_area_label"
+                android:textColor="@color/Text1"
                 android:textSize="20sp" />
 
             <EditText
                 android:id="@+id/NewAreaName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/white"
                 android:hint="@string/new_area_name_hint"
                 android:imeOptions="actionDone"
-                android:inputType="text" />
+                android:inputType="text"
+                android:textColor="@android:color/black" />
 
             <EditText
                 android:id="@+id/NewAreaDesc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:background="@drawable/text_border_selector"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginStart="5dp"
+                android:background="@color/white"
                 android:ems="10"
                 android:gravity="top"
                 android:hint="@string/new_area_desc_hint"
                 android:inputType="textMultiLine"
-                android:minLines="3" />
+                android:minLines="3"
+                android:textColor="@android:color/black" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -59,6 +67,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/radius_label"
+                    android:textColor="@color/Text1"
                     android:textSize="20sp" />
 
                 <EditText
@@ -67,9 +76,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:layout_weight="0.9"
-                    android:background="@drawable/text_border_default"
+                    android:background="@color/white"
                     android:hint="@string/radius_hint"
-                    android:inputType="numberSigned" />
+                    android:inputType="numberSigned"
+                    android:textColor="@android:color/black" />
 
                 <TextView
                     android:id="@+id/MeterLabel"
@@ -78,6 +88,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_weight="2.8"
                     android:text="@string/meter_label"
+                    android:textColor="@color/white"
                     android:textSize="20sp" />
             </LinearLayout>
 
@@ -85,9 +96,11 @@
                 android:id="@+id/RadiusSeekBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
                 android:max="995"
-                android:progress="5" />
+                android:progress="5"
+                android:theme="@style/SeekBarColor"/>
 
             <Button
                 android:id="@+id/CreateNewAreaBtn"
@@ -95,7 +108,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="@string/create_new_area_btn" />
+                android:text="@string/create_new_area_btn"
+                android:backgroundTint="@color/grey_100"
+                android:textColor="@color/grey_500"/>
 
         </LinearLayout>
     </ScrollView>
